...

class _NotificationPageState extends State<NotificationPage> {
  // Dummy data untuk screenshot
  final List<NotificationModel> _notifications = [
    NotificationModel(
      id: '1',
      title: 'Booking Berhasil!',
      message: 'Booking parkir Anda di Mega Mall Batam Centre telah dikonfirmasi. Slot: UTAMA-L1-A05',
      type: 'success',
      timestamp: DateTime.now().subtract(const Duration(minutes: 5)),
      isRead: false,
    ),
    NotificationModel(
...
